- fixed Radio buttons and checkboxes look ugly in IE8 (bnc #601309) - fixed The IE fieldset background color bleed bug - added stylesheet ie_fixes.css for CSS fixes for IE - adjusted length of password strength meter - minnor UI changes

--- a/webclient/app/sass/_borders.sass
+++ b/webclient/app/sass/_borders.sass
@@ -67,10 +67,23 @@
   border-color: mix(!c_black, !border_inset_base_color, 50%) mix(!c_black, !border_inset_base_color,35%) mix(!c_black, !border_inset_base_color, 20%)
   border-style: solid
   border-width: 1px
-
+  
 =border-outset
   border-color: mix(!c_black, !border_outset_base_color, 20%) mix(!c_black, !border_outset_base_color,35%) mix(!c_black, !border_outset_base_color, 50%)
   border-style: solid
   border-width: 1px
+  
+/*changes
+=border-inset-5
+  border-color: #DDD
+  border-style: solid
+  border-width: 5px
+  
+=border-outset-3
+  border-color: #DFDFDF
+  border-style: solid
+  border-width: 3px
+  
+  
 
 
