--- a/webclient/public/stylesheets/new_inputs.css
+++ b/webclient/public/stylesheets/new_inputs.css
@@ -129,4 +129,7 @@ input[type="submit"][disabled], input[type="button"][disabled], button[type="sub
     -webkit-border-radius:0px 3px 3px 0px;
   }
 
+  /* TIME */
+  /* Fix for bug 601309 - Radio buttons and checkboxes look ugly in IE8  */
+  input[type="radio"], input[type="checkbox"] { border: none; background: none; vertical-align:top;}
 /* END */
